--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 						<div class="navbar-right">
 							<ul class="list-inline">
 								<li>
-									<a href="http://davidpham5.github.io/wedding-wire-portfolio/">Home</a>
+									<a href="http://davidpham5.github.io/portfolio/">Home</a>
 								</li>
 								<li>
 									<a href="portfolio.html">Portfolio</a>
