--- a/index.html
+++ b/index.html
@@ -74,43 +74,23 @@
 			<div class="col-xs-6 col-xs-offset-3">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
-					Hi. I'm David Pham. I'm a frontend designer, some times public speaker, and areo-pressed coffee enthusiast currently residing in Washigton DC. I help people create exceptional interfaces through human centered design.
+					Hi. I'm David Pham. I'm a frontend designer, champion of the user, and areo-pressed coffee enthusiast currently residing in Washigton DC. I help people create exceptional interfaces through human centered design.
 				</p>
 				<p>
-					I have a preference for <span class="fixed-width-type">Anonymous Pro</span> as my fixed width type for my code editor, Sublime Text 3 (former Coda 2 user). I taught myself how to code and program. Ever since I graduated school, I'm drawn to people who built things. It was not until a few years I found my path.	
+					I have a preference for <span class="fixed-width-type">Anonymous Pro</span> as my fixed width type for my code editor, Sublime Text 3 (former Coda 2 user). Promixma Nova is my favorite font. #333 is a nice contrast against #fff for readability. Simplicity requires discipline and restraint. I try to avoid being too clever. These are just some of my values. I hope we can argue together and build something great.	
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. I usually cringed at how inexperience I was. I've learned to embrace that cringe feeling now. Without hard work, failures, and long sighs, I wouldn't have become a designer. When you're done looking around, lets get some coffee and talk shop.  
+					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. I usually cringed at how inexperience I was. I made a lot mistakes, failed, and sighed at my ignorance. I've learned a lot and I am thankful for those who helped me along the way. When you're done looking around, lets get some coffee and talk shop.  
 				</p>
 			</div>
 		</section>
 		<hr class="hr-full">
-		<section id="contact" class="row">
-			<div class="col-xs-6 col-xs-offset-3">
-				<h2 class="heading-big">Get in Touch</h2>
-				<p>
-					Interested in working together, exchanging, or just talk about coffee? Great! Get in touch, I'm friendly
-				</p>
-				<form action="" method="post" class="contact-form">
-					<fieldset>
-						<div class="input-group">
-							<label for="email" class="screen-only">Email</label>
-							<input id="email" type="email" placeholder="Your Email" name="email">
-						</div>
-						<div class="input-group">
-							<label for="message" class="screen-only">Message</label>
-							<textarea rows="1" name="message" placeholder="Message"></textarea>
-						</div>
-						<input type="submit" value="Submit">
-					</fieldset>	
-				</form>
-			</div>
-		</section>
+		
 
 	</div>
 	<footer class="footer">
 		<div class="wrap container-fluid">
-			<p class="small">Look what I built</p>
+			<p class="small">Look what I built, mom!</p>
 		</div>
 	</footer>
 
