--- a/portfolio.html
+++ b/portfolio.html
@@ -76,12 +76,57 @@
 	</div>
 
 	<div class="main wrap">
-		<h1>Portfolio</h1>
+		<section>
+			<h1>Portfolio</h1>
+		</section>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<h3 class="sub-header">Professional Work</h3>
+			</div>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="https://onestop.symplicity.com">
+						<img src="images/onestop-homepage.png" alt="View more info" class="card-image" />
+					</a>
+					<div class="card-body">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4>OneStop by Symplicity <span class="view-live"><a href="https://onestop.symplicity.com">View Live</a></span></h4>
+								<div>
+									<div class="heading strong">Technologies:</div>
+									<ul class="list-unstyled tech-list outline-list">
+										<li>AngularJS</li>
+										<li>Bootstrap 3</li>
+										<li>LESS/SASS</li>
+										<li>Grunt, Bower, JSPM, and Yeoman</li>
+									</ul>
+								</div>
+								<div>
+									<p>
+										<div class="heading strong">Role: </div>
+										I am the primary front-end developer for this product. Since 2014, I built the templates, styles (LESS then SASS) with Bootstrap as our foundation. Moreover, I developed Angular directives, servies, and controllers to present lists, forms, navigation, headers, and footers.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="col-xs-6">
+			
+			</section>
+
+			<section class="col-xs-4">
+			
+			</section>
+		</div>
 	</div>
 	
 	<footer class="footer">
 		<div class="wrap container-fluid">
-			<p class="small">Look what I built</p>
+			<p class="small">Look what I built, mom!</p>
 		</div>
 	</footer>
 
