add portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-9">
-						<a href="#" class="branding">DP</a>
+						<a href="http://davidpham5.github.io/portfolio/" class="branding">DP</a>
 					</div>
 					<div class="col-xs-3">
 						<div class="navbar-right">
@@ -86,13 +86,13 @@
 			</div>
 			<section class="col-xs-6">
 				<div class="card">
-					<a href="https://onestop.symplicity.com">
+					<a href="https://onestop.symplicity.com" target="_blank">
 						<img src="images/onestop-homepage.png" alt="View more info" class="card-image" />
 					</a>
 					<div class="card-body">
 						<div class="row">
 							<div class="col-xs-12">
-								<h4>OneStop by Symplicity <span class="view-live"><a href="https://onestop.symplicity.com">View Live</a></span></h4>
+								<h4>OneStop by Symplicity <span class="view-live"><a href="https://onestop.symplicity.com" target="_blank">View Live</a></span></h4>
 								<div>
 									<div class="heading strong">Technologies:</div>
 									<ul class="list-unstyled tech-list outline-list">
@@ -113,13 +113,98 @@
 					</div>
 				</div>
 			</section>
-
 			<section class="col-xs-6">
-			
+				<div class="card">
+					<a href="images/edb.png" target="_blank">
+						<img src="images/edb.png" alt="View more info" class="card-image" />
+					</a>
+					<div class="card-body">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4>Enterprise Dashboard by Symplicity</h4>
+								<div>
+									<div class="heading strong">Technologies:</div>
+									<ul class="list-unstyled tech-list outline-list">
+										<li>Backbone JS</li>
+										<li>Bootstrap 2</li>
+										<li>FLOT</li>
+										<li>jQuery</li>
+									</ul>
+								</div>
+								<div>
+									<p>
+										<div class="heading strong">Role: </div>
+										My first web app. I learned MVC programming with guidance of my colleague. We learned Backbone JS had a large learning curve to setup things. FLOT used jQuery to display data as graphs and charts. I learned how to make API calls and retrive JSON data. Bootstrap provided a lot of the foundation, but we ended up customizing most of it. This app is no longer in active development. 
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="col-xs-12">
+				<h3 class="sub-header">Freelance Work</h3>
+			</div>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="http://www.uncorkdart.com" target="_blank">
+						<img src="images/wp-theme-1.jpg" alt="View more info" class="card-image" />
+					</a>
+					<div class="card-body">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4>WordPress Custom Theme <span class="view-live"><a href="http://www.uncorkdart.com" target="_blank">View Live</a></span></h4>
+								<div>
+									<div class="heading strong">Technologies:</div>
+									<ul class="list-unstyled tech-list outline-list">
+										<li>WordPress</li>
+										<li>Bootstrap 2.5</li>
+										<li>HTML5 CSS3</li>
+										<li>PHP</li>
+									</ul>
+								</div>
+								<div>
+									<p>
+										<div class="heading strong">Role: </div>
+										Client wanted to a responsive custom WordPress theme to launch there business. Their business provided art lessons with wine. They purchased my custom theme in 2013. They currently use it. All done using WordPress's built in functions, base theme, and widgets.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
-			<section class="col-xs-4">
-			
+			<div class="col-xs-12">
+				<h3 class="sub-header">Fun Illustrations</h3>
+			</div>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="images/image-1.jpg" target="_blank">
+						<img src="images/image-1.jpg" alt="View more info" class="card-image" />
+					</a>
+				</div>
+			</section>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="images/image-2.jpg" target="_blank">
+						<img src="images/image-2.jpg" alt="View more info" class="card-image" />
+					</a>
+				</div>
+			</section>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="images/image-3.jpg" target="_blank">
+						<img src="images/image-3.jpg" alt="View more info" class="card-image" />
+					</a>
+				</div>
+			</section>
+			<section class="col-xs-6">
+				<div class="card">
+					<a href="images/image-4.png" target="_blank">
+						<img src="images/image-4.png" alt="View more info" class="card-image" />
+					</a>
+				</div>
 			</section>
 		</div>
 	</div>
