--- a/portfolio.html
+++ b/portfolio.html
@@ -145,10 +145,10 @@
 			<div class="col-xs-12">
 				<h3 class="sub-header">Freelance Work</h3>
 			</div>
-			<section class="col-xs-6">
+			<section class="col-xs-12">
 				<div class="card">
 					<a href="http://www.uncorkdart.com" target="_blank">
-						<img src="images/wp-theme-1.jpg" alt="View more info" class="card-image" />
+						<img src="images/wp-theme-1.jpg" alt="View more info" class="card-image full" />
 					</a>
 					<div class="card-body">
 						<div class="row">
