--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					I have a preference for <span class="fixed-width-type">Anonymous Pro</span> as my fixed width type for my code editor, Sublime Text 3 (former Coda 2 user). Proxima Nova is my favorite font. #333 is a nice contrast against #fff for readability. Simplicity requires discipline and restraint. I try to avoid being too clever. These are just some of my values. I hope we can share what we care about and build something great.	
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. I usually cringed at how inexperience I was. I made a lot mistakes, failed, and sighed at my ignorance. I've learned a lot and I am thankful for those who helped me along the way. When you're done looking around, lets get some coffee and talk shop.  
+					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. I usually cringed at how inexperienced I was. I made a lot mistakes, failed, and sighed at my ignorance. I've learned a lot and I am thankful for those who helped me along the way. When you're done looking around, lets get some coffee and talk shop.  
 				</p>
 				<br>
 			</div>
