--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="col-xs-6 col-xs-offset-3">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
-					Hi. I'm David Pham. I'm a frontend designer, headphones collector, and areo-pressed coffee enthusiast currently residing in Washigton DC. I help people create exceptional interfaces through human centered design.
+					Hi. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washigton DC. I help people create exceptional interfaces through human centered design.
 				</p>
 				<p>
 					I have a preference for <span class="fixed-width-type">Anonymous Pro</span> as my fixed width type for my code editor, Sublime Text 3 (former Coda 2 user). Proxima Nova is my favorite font. #333 is a nice contrast against #fff for readability. Simplicity requires discipline and restraint. I try to avoid being too clever. These are just some of my values. I hope we can share what we care about and build something great.	
