--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
 								<div>
 									<p>
 										<div class="heading strong">Role: </div>
-										I am the primary front-end developer for this product. Since 2014, I built the templates, styles (LESS then SASS) with Bootstrap as our foundation. Moreover, I developed Angular directives, servies, and controllers to present lists, forms, navigation, headers, and footers.
+										I am the primary front-end developer for this product. Since 2014, I built the templates, styles (LESS then SASS) with Bootstrap as our foundation. Moreover, I developed Angular directives, services, and controllers to present lists, forms, navigation, headers, and footers.
 									</p>
 								</div>
 							</div>
