--- a/index.html
+++ b/index.html
@@ -74,13 +74,18 @@
 			<div class="col-xs-6 col-xs-offset-3">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
-					Hi. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washigton DC. I help people create exceptional interfaces through human centered design.
+					Hello there. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washington DC.
 				</p>
 				<p>
-					I have a preference for <span class="fixed-width-type">Anonymous Pro</span> as my fixed width type for my code editor, Sublime Text 3 (former Coda 2 user). Proxima Nova is my favorite font. #333 is a nice contrast against #fff for readability. Simplicity requires discipline and restraint. I try to avoid being too clever. These are just some of my values. I hope we can share what we care about and build something great.	
+					<span class="drop">M</span>y design sensibilities are heavily influenced by several designers. The work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a> continue to guide me in making things more useful for people. 
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. I usually cringed at how inexperienced I was. I made a lot mistakes, failed, and sighed at my ignorance. I've learned a lot and I am thankful for those who helped me along the way. When you're done looking around, lets get some coffee and talk shop.  
+					Much of my taste comes from transforming traditional print to web design. <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> showed ideas from print such as, proper typography, and brought them to the web. He really inspired me in making the web more beautiful through type. 
+				<p>
+					<a href="http://www.zeldman.com/about/">Jeffrey Zeldman</a> is a personal hero of mine. His work in web standards showed the power and beauty of CSS, the clarity in semantic HTML, and the insistence for writing cleaner code.
+				</p>
+				<p>
+					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. When you're done looking around, lets get some coffee and talk shop.  
 				</p>
 				<br>
 			</div>
