--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
 								<div>
 									<p>
 										<div class="heading strong">Role: </div>
-										Client wanted to a responsive custom WordPress theme to launch there business. Their business provided art lessons with wine. They purchased my custom theme in 2013. They currently use it. All done using WordPress's built in functions, base theme, and widgets.
+										I learned how to become a designer when I was freelancing as a WordPress theme designer. I created this theme in 2012, around the time when <a href="http://responsivewebdesign.com/about/#bio-marcotte">Eric Marcotte</a> introduced his book on responsive web design. The main focus of the theme revolved around fluid grids, flexible images, and media queries. I was able to sell this theme to a <a href="http://www.uncorkdart.com" target="_blank">client</a> and they are currently using it for their business.
 									</p>
 								</div>
 							</div>
@@ -205,6 +205,9 @@
 						<img src="images/image-4.png" alt="View more info" class="card-image" />
 					</a>
 				</div>
+			</section>
+			<section class="col-xs-12">
+				<p>These have nothing to do with work. But they remind me that I enjoyed drawing as a kid; I can still enjoy it now as an adult.</p>
 			</section>
 		</div>
 	</div>
