--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 <body>
 	<header id="navigation">
 		<nav class="navbar">
-			<div class="container-fluid">
+			<div class="main wrap">
 				<div class="row">
 					<div class="col-xs-9">
 						<a href="http://davidpham5.github.io/portfolio/" class="branding">DP</a>
