--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM -->
 
 	<!-- Hey There! Pleasure to see you poking around. Like you, I tend to look around to see how sites or apps are built. Take your time and look around. Let me know if you have any questions.  -->
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<header id="navigation">
@@ -71,21 +72,21 @@
 
 	<div class="main wrap container-fluid">
 		<section id="about" class="row">
-			<div class="col-xs-6 col-xs-offset-3">
+			<div class="col-sm-6 col-sm-offset-3 col-xs-12">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
 					Hello there. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washington DC.
 				</p>
 				<p>
-					<span class="drop">M</span>y design sensibilities are heavily influenced by several designers. The work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a> continue to guide me in making things more useful for people. 
+					<span class="drop">M</span>y design sensibilities are heavily influenced by several designers. The work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a> continue to guide me in making things more useful for people.
 				</p>
 				<p>
-					Much of my taste comes from transforming traditional print to web design. <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> showed ideas from print such as, proper typography, and brought them to the web. He really inspired me in making the web more beautiful through type. 
+					Much of my taste comes from transforming traditional print to web design. <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> showed ideas from print such as, proper typography, and brought them to the web. He really inspired me in making the web more beautiful through type.
 				<p>
 					<a href="http://www.zeldman.com/about/">Jeffrey Zeldman</a> is a personal hero of mine. His work in web standards showed the power and beauty of CSS, the clarity in semantic HTML, and the insistence for writing cleaner code.
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. When you're done looking around, lets get some coffee and talk shop.  
+					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. When you're done looking around, lets get some coffee and talk shop.
 				</p>
 				<br>
 			</div>
@@ -103,7 +104,7 @@
 	</footer>
 
 	<script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
-	
+
 	<script src="scripts/main.js"></script>
 </body>
 </html>
