--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
 	MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM -->
 
 	<!-- Hey There! Pleasure to see you poking around. Like you, I tend to look around to see how sites or apps are built. Take your time and look around. Let me know if you have any questions.  -->
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<header id="navigation">
@@ -84,7 +85,7 @@
 			<div class="col-xs-12">
 				<h3 class="sub-header">Professional Work</h3>
 			</div>
-			<section class="col-xs-6">
+			<section class="co-xs-12 col-sm-6">
 				<div class="card">
 					<a href="https://onestop.symplicity.com" target="_blank">
 						<img src="images/onestop-homepage.png" alt="View more info" class="card-image" />
@@ -113,7 +114,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="col-xs-6">
+			<section class="co-xs-12 col-sm-6">
 				<div class="card">
 					<a href="images/edb.png" target="_blank">
 						<img src="images/edb.png" alt="View more info" class="card-image" />
@@ -134,7 +135,7 @@
 								<div>
 									<p>
 										<div class="heading strong">Role: </div>
-										My first web app. I learned MVC programming with guidance of my colleague. We learned Backbone JS had a large learning curve to setup things. FLOT used jQuery to display data as graphs and charts. I learned how to make API calls and retrive JSON data. Bootstrap provided a lot of the foundation, but we ended up customizing most of it. This app is no longer in active development. 
+										My first web app. I learned MVC programming with guidance of my colleague. We learned Backbone JS had a large learning curve to setup things. FLOT used jQuery to display data as graphs and charts. I learned how to make API calls and retrive JSON data. Bootstrap provided a lot of the foundation, but we ended up customizing most of it. This app is no longer in active development.
 									</p>
 								</div>
 							</div>
@@ -211,7 +212,7 @@
 			</section>
 		</div>
 	</div>
-	
+
 	<footer class="footer">
 		<div class="wrap container-fluid">
 			<p class="small">Look what I built, mom!</p>
@@ -219,7 +220,7 @@
 	</footer>
 
 	<script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
-	
+
 	<script src="scripts/main.js"></script>
 </body>
 </html>
