--- a/portfolio.html
+++ b/portfolio.html
@@ -39,14 +39,14 @@
 		<nav class="navbar">
 			<div class="main wrap">
 				<div class="row">
-					<div class="col-xs-9">
+					<div class="col-xs-2">
 						<a href="http://davidpham5.github.io/portfolio/" class="branding">DP</a>
 					</div>
-					<div class="col-xs-3">
-						<div class="navbar-right">
+					<div class="col-xs-10">
+						<div class="navbar-right flex-end">
 							<ul class="list-inline">
 								<li>
-									<a href="http://davidpham5.github.io/portfolio/">Home</a>
+									<a href="http://davidpham5.github.io/portfolio/">Welcome</a>
 								</li>
 								<li>
 									<a href="portfolio.html">Portfolio</a>
