update button alignment

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 	<div class="main wrap container-fluid">
 		<section id="about" class="row">
-			<div class="col-sm-6 col-sm-offset-3 col-xs-12">
+			<div class=" col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
 					Hello there. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washington DC.
