update welcome page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<a href="http://www.zeldman.com/about/">Jeffrey Zeldman</a> is a personal hero of mine. His work in web standards showed the power and beauty of CSS, the clarity in semantic HTML, and the insistence for writing cleaner code.
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. When you're done looking around, lets get some coffee and talk shop.
+					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. Also, I've put together a single-page app to show off my <a href="http://davidpham5.github.io/resume/">resume</a>. When you're done looking around, lets get some coffee and talk shop.
 				</p>
 				<br>
 			</div>
