remove portfolio page

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 									<a href="http://davidpham5.github.io/portfolio/">Welcome</a>
 								</li>
 								<li>
-									<a href="portfolio.html">Portfolio</a>
-								</li>
-								<li>
 									<a href="http://davidpham5.github.io/resume/">Resume</a>
 								</li>
 							</ul>
@@ -75,25 +72,25 @@
 			<div class=" col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
-					Hello there. I'm David Pham. I'm a frontend designer, headphones collector, and aero-pressed coffee enthusiast currently residing in Washington DC.
+					Hello there. I'm David Pham. I'm a frontend developer for a tech company in Washington DC. I've been a constantly learning since 1984. And I love coffee brewed from an Aeropress.
 				</p>
 				<p>
-					<span class="drop">M</span>y design sensibilities are heavily influenced by several designers. The work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a> continue to guide me in making things more useful for people.
+					<span class="drop">M</span>y design sensibilities are heavily influenced by several people. I often revisit the work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a>. His principles are something I continue to study over and over whenever I run into a tough challenge.
 				</p>
 				<p>
-					Much of my taste comes from transforming traditional print to web design. <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> showed ideas from print such as, proper typography, and brought them to the web. He really inspired me in making the web more beautiful through type.
+					I really admire <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> and his hard work around typography. He really inspired me in making the web more beautiful.
 				<p>
-					<a href="http://www.zeldman.com/about/">Jeffrey Zeldman</a> is a personal hero of mine. His work in web standards showed the power and beauty of CSS, the clarity in semantic HTML, and the insistence for writing cleaner code.
+					<a href="http://www.jensimmons.com/">Jen Simmons</a> is someone who has done some exceptional work on advancing CSS to a new era. Her work in web standards, CSS Grid, and An Event Apart presentations impacted me in becoming a better frontend developer.
 				</p>
 				<p>
-					I've kept a small <a href="portfolio.html">portfolio</a> to show off some things I did in the past. Also, I've put together a single-page app to show off my <a href="http://davidpham5.github.io/resume/">resume</a>. When you're done looking around, lets get some coffee and talk shop.
+					I've put together my <a href="http://davidpham5.github.io/resume/">resume</a> as AngularJS 1.5 app. It illustrates something as simple as a resume can be done with great type and engineering. When you're done looking around, lets get some coffee and talk shop.
 				</p>
 				<br>
 			</div>
 		</section>
 		<div class="call-to-action">
 			<div class="button-container">
-				<a href="portfolio.html" class="btn btn-primary btn-lg">View Portfolio</a>
+				<a href="http://davidpham5.github.io/resume/" class="btn btn-primary btn-lg">View Resume</a>
 			</div>
 		</div>
 	</div>
