--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<a href="http://www.jensimmons.com/">Jen Simmons</a> is someone who has done some exceptional work on advancing CSS to a new era. Her work in web standards, CSS Grid, and An Event Apart presentations impacted me in becoming a better frontend developer.
 				</p>
 				<p>
-					I've put together my <a href="http://davidpham5.github.io/resume/">resume</a> as AngularJS 1.5 app. It illustrates something as simple as a resume can be done with great type and engineering. When you're done looking around, lets get some coffee and talk shop.
+					I've put together my <a href="http://davidpham5.github.io/resume/">resume</a> as an AngularJS 1.5 app. It illustrates something as simple as a resume can be done with great type and engineering. When you're done looking around, lets get some coffee and talk shop.
 				</p>
 				<br>
 			</div>
