--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<div class="main wrap">
 				<div class="row">
 					<div class="col-xs-2">
-						<a href="http://davidpham5.github.io/portfolio/" class="branding">DP</a>
+						<a href="http://davidpham5.github.io/home/" class="branding">DP</a>
 					</div>
 					<div class="col-xs-10">
 						<div class="navbar-right flex-end">
 							<ul class="list-inline">
 								<li>
-									<a href="http://davidpham5.github.io/portfolio/">Welcome</a>
+									<a href="http://davidpham5.github.io/home/">Welcome</a>
 								</li>
 								<li>
 									<a href="http://davidpham5.github.io/resume/">Resume</a>
