--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
 	<div class="main wrap container-fluid">
 		<section id="about" class="row">
-			<div class=" col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+			<div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 				<h2 class="heading-big">About Me</h2>
 				<p class="lead">
-					Hello there. I'm David Pham. I'm a frontend developer for a tech company in Washington DC. I've been a constantly learning since 1984. And I love coffee brewed from an Aeropress.
+					Hello there. I'm David Pham. I'm a frontend developer and web designer in Washington DC. I've been a constantly learning since 1984. And I love coffee brewed from an Aeropress.
 				</p>
 				<p>
 					<span class="drop">M</span>y design sensibilities are heavily influenced by several people. I often revisit the work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a>. His principles are something I continue to study over and over whenever I run into a tough challenge.
@@ -80,7 +80,7 @@
 				<p>
 					I really admire <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> and his hard work around typography. He really inspired me in making the web more beautiful.
 				<p>
-					<a href="http://www.jensimmons.com/">Jen Simmons</a> is someone who has done some exceptional work on advancing CSS to a new era. Her work in web standards, CSS Grid, and An Event Apart presentations impacted me in becoming a better frontend developer.
+					I closely follow the work of <a href="http://www.jensimmons.com/">Jen Simmons</a>. Her work in web standards, CSS Grid, and typography has significantly impacted me. She's a personal hero of mine.
 				</p>
 				<p>
 					I've put together my <a href="http://davidpham5.github.io/resume/">resume</a> as an AngularJS 1.5 app. It illustrates something as simple as a resume can be done with great type and engineering. When you're done looking around, lets get some coffee and talk shop.
