add lab for css grid

--- a/lab.html
+++ b/lab.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Home</title>
+	<title>Lab</title>
 	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
 	<link rel=stylesheet href="styles/main.css">
@@ -61,50 +60,28 @@
 			</div>
 		</nav>
 	</header>
-	<div class="hero">
-		<div class="row center-xs">
-			<h1 class="hero-headline">Welcome!</h1>
-		</div>
-		<div class="row center-xs">
-			<h2 class="hero-tagline">This is my little lab where I try out new ideas.</h2>
-		</div>
-	</div>
 
-	<div class="main wrap container-fluid">
-		<section id="about" class="row">
-			<div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
-				<h2 class="heading-big">About Me</h2>
-				<p class="lead">
-					Hello there. I'm David Pham. I'm a frontend developer and web designer in Washington DC. I've been a constantly learning since 1984. And I love coffee brewed from an Aeropress.
-				</p>
-				<p>
-					<span class="drop">M</span>y design sensibilities are heavily influenced by several people. I often revisit the work of Dieter Rams, and his <a href="https://www.vitsoe.com/gb/about/good-design" target="_blank">ten principles for good design</a>. His principles are something I continue to study over and over whenever I run into a tough challenge.
-				</p>
-				<p>
-					I really admire <a href="http://jasonsantamaria.com/about/" target="_blank">Jason Santa Maria</a> and his hard work around typography. He really inspired me in making the web more beautiful.
-				<p>
-					I closely follow the work of <a href="http://www.jensimmons.com/">Jen Simmons</a>. Her work in web standards, CSS Grid, and typography has significantly impacted me. She's a personal hero of mine.
-				</p>
-				<p>
-					I've put together my <a href="http://davidpham5.github.io/resume/">resume</a> as an AngularJS 1.5 app. It illustrates something as simple as a resume can be done with great type and engineering. When you're done looking around, lets get some coffee and talk shop.
-				</p>
-				<br>
-			</div>
-		</section>
-		<div class="call-to-action">
-			<div class="button-container">
-				<a href="http://davidpham5.github.io/resume/" class="btn btn-primary btn-lg">View Resume</a>
-			</div>
-		</div>
-	</div>
-	<footer class="footer">
-		<div class="wrap container-fluid">
-			<p class="small">Look what I built, mom!</p>
-		</div>
-	</footer>
+  <main>
+    <header class="header--main">
+      <div class="header-wrapper">
+        <h1>The Experiments in Grid Layout</h1>
+        <h1>of David Pham</h1>
+        <!-- <p>Check back every so often</p> -->
 
-	<script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+        <div class="demo-list">
+          <p>Soon to come: examples!</p>
+          <!-- <ul>
+            <li><a href=""></a>one</li>
+            <li><a href=""></a>two</li>
+            <li><a href=""></a>three</li>
+          </ul> -->
+        </div>
 
-	<script src="scripts/main.js"></script>
+        <p class="follow-links">
+          Follow <a href="http://twitter.com/davidpham5" target="_blank">@davidpham5</a>
+        </p>
+    </div>
+    </header>
+  </main>
 </body>
 </html>
