--- a/lab.html
+++ b/lab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>Lab</title>
 	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
@@ -35,7 +35,7 @@
 	<meta name="viewport" content="width=device-width">
 </head>
 <body>
-	<header id="navigation">
+  <header id="navigation">
 		<nav class="navbar">
 			<div class="main wrap">
 				<div class="row">
@@ -84,5 +84,8 @@
     </div>
     </header>
   </main>
+	<script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+
+	<script src="scripts/main.js"></script>
 </body>
 </html>
