fix link for lab

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<a href="http://davidpham5.github.io/resume/">Resume</a>
                 </li>
                 <li>
-                  <a href="http://davidpham5.github.io/home/lab/">Lab</a>
+                  <a href="http://davidpham5.github.io/home/lab">Lab</a>
                 </li>
 							</ul>
 						</div>
